--- a/css/default.less
+++ b/css/default.less
@@ -10,11 +10,11 @@ a:active,
 a:focus,
 a:link,
 a:visited {
-  color: @white;
+  color: @black;
 }
 
 a:hover {
-  color: @white;
+  color: @black;
   text-decoration: none;
 }
 
@@ -32,7 +32,7 @@ h1, h2, h3, h4, h5, h6 {
 // BEGIN OF: HTML
 
 html {
-  background-color: @white;
+  background-color: @black;
   font-size: 62.5%; /* Sets up the Base 10 stuff */
 
   ////////////////////////////////////////////////////////////////
@@ -42,8 +42,8 @@ html {
   body {
     .libre-baskerville;
     .hidden;
-    background-color: @black;
-    color: @white;
+    background-color: @white;
+    color: @black;
 
     ////////////////////////////////////////////////////////////////
     ////////////////////////////////////////////////////////////////
@@ -80,7 +80,7 @@ html {
     // BEGIN OF: FOOTER
 
     .mastfoot {
-      color: @white;
+      color: @black;
     }
 
     ////////////////////////////////////////////////////////////////
